// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchForm should render the SearchForm component correctly when type prop is caterer 1`] = `
<Fragment>
  <div
    className="form-input"
  >
    <label
      className="hide"
      htmlFor="search"
    >
      Search For Meals
    </label>
    <input
      className="open menu-search-input"
      id="search"
      name="search"
      onChange={[Function]}
      placeholder="Search For Meals"
      type="text"
      value=""
    />
  </div>
</Fragment>
`;

exports[`SearchForm should render the SearchForm component correctly when type prop is customer 1`] = `
<Fragment>
  <div
    className="search-wrapper"
  >
    <div
      className="search-form"
    >
      <div
        className="search-btn"
      >
        <img
          alt=""
          src="/img/search.svg"
        />
      </div>
      <label
        className="hide"
        htmlFor="search"
      >
        Search For Meals
      </label>
      <input
        id="search"
        label="Search"
        name="search"
        onChange={[Function]}
        placeholder="Search For Meals"
        type="text"
        value=""
      />
    </div>
  </div>
</Fragment>
`;
